메인 업데이트

--- a/portal/css/main.css
+++ b/portal/css/main.css
@@ -167,15 +167,15 @@ header.headerfix .header_top,
     background: no-repeat center;
     background-size: cover;
 }
-/* .swiper-container .slide_wrap.first {
+.swiper-container.main_02 .slide_wrap.first {
     background-image: url(../images/bg/bg_main_sec1_01.png);
 }
-.swiper-container .slide_wrap.second {
+.swiper-container.main_02 .slide_wrap.second {
     background-image: url(../images/bg/bg_main_sec1_02.png);
 }
-.swiper-container .slide_wrap.third {
+.swiper-container.main_02 .slide_wrap.third {
     background-image: url(../images/bg/bg_main_sec1_03.png);
-} */
+}
 .swiper-container .slide_wrap.first {
     background-image: url(../images/bg/bg_main_sec1_04.png);
 }
