--- a/portal/css/style.css
+++ b/portal/css/style.css
@@ -35,8 +35,8 @@ header .header_top {
 header .header_top h1 a {
     display: flex;
     background: url(../images/logo.png) no-repeat center;
-    width: 184px;
-    height: 58px;
+    width: 244px;
+    height: 37px;
     text-indent: -9999px;
 }
 .gnb_open header .header_top h1 a,
@@ -4540,9 +4540,6 @@ footer .footer_bottom {
     header .header_top {
         height: 70px;
     }
-    header .header_top h1 {
-        margin-top: 15px;
-    }
     header .header_top h1 a {
         width: 173px;
         background-size: 100%;
@@ -4587,7 +4584,8 @@ footer .footer_bottom {
         display: flex;
         width: 132px;
         height: 22px;
-        background: url(../images/logo_m.png) no-repeat center;
+        background: url(../images/logo.png) no-repeat center;
+        background-size: 100% auto;
     }
     .allmenu_box .allmenu_box_header .allmenu_util {
         display: flex;
