--- a/portal/css/style.css
+++ b/portal/css/style.css
@@ -1091,13 +1091,142 @@ a.ico_folder::after {
     display: flex;
     flex-direction: row;
     margin-top: 15px;
+    flex-wrap: wrap;
+    padding: 0;
 }
 .list_item .mna_box dt {
     font-size: 20px;
     font-weight: 600;
 }
+.list_item .mna_box dd {
+    font-weight: 400;
+}
+.list_item .mna_box > dd:nth-child(3) {
+    min-width: 90%;
+}
 .list_item .mna_box dd .font_blue {
     color: #333399;
+}
+.tbl_mna {
+    display: flex;
+    align-items: flex-start;
+    width: 100%;
+    padding-left: 110px;
+    box-sizing: border-box;
+    gap: 45px;
+}
+.tbl_mna dl {
+    padding: 20px 0 40px;
+}
+.tbl_mna dl:nth-child(1) {
+    width: calc(70% - 23px);
+}
+.tbl_mna dl:nth-child(2) {
+    width: calc(30% - 23px);
+}
+.tbl_mna dl + dl {
+    margin-top: 0;
+}
+.tbl_mna dl dt {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    height: 48px;
+    box-sizing: border-box;
+    border-radius: 10px;
+    background-color: #c9d0fb;
+    font-size: 18px;
+    color: #273377;
+}
+.tbl_mna dl dt::before {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: -25px;
+    left: 50%;
+    width: 1px;
+    height: 25px;
+    background-color: #c9d0fb;
+    transform: translateX(-50%);
+}
+.tbl_mna dl dt::after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: -33px;
+    left: 50%;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: #c9d0fb;
+    transform: translateX(-50%);
+    z-index: 1;
+}
+.tbl_mna dl dd {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 85px;
+    padding: 20px;
+    box-sizing: border-box;
+    border-radius: 10px;
+    background-color: #f6f7fd;
+    border: 1px solid #cfd2e8;
+    font-size: 16px;
+    color: #676a7f;
+}
+.tbl_mna dl dd::after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: -26px;
+    left: 50%;
+    width: 1px;
+    height: 25px;
+    background-color: #c9d0fb;
+    transform: translateX(-50%);
+}
+.tbl_mna dl dd:last-child::after {
+    display: none;
+}
+.content_list_box .list_item .btn_box.notice {
+    justify-content: flex-start;
+    margin: 0;
+    margin-top: 10px;
+}
+.content_list_box .list_item .btn_box.notice * {
+    align-items: center;
+    width: auto;
+    flex: none;
+    background-color: #457cd7;
+    padding: 10px 20px;
+}
+.content_list_box .list_item .btn_box.notice *::after {
+    content: "";
+    display: block;
+    width: 14px;
+    height: 14px;
+    background: url(../images/ico/ico_download_w.png) no-repeat center;
+    margin-left: 10px;
+}
+.tbl_box.notice tr td:last-child {
+    text-align: left;
+}
+.tbl_box.notice .btn_box {
+    margin: 0;
+}
+.tbl_box.notice .btn_box * {
+    flex: none;
+    width: auto;
+    padding: 3px 13px;
+    margin-top: 5px;
+    background-color: #e1ecff;
+    border: 1px solid #afc3e6;
+    font-size: 14px;
+    color: #1b53b3;
 }
 
 /* 벤처투자상담 */
@@ -5048,6 +5177,39 @@ footer .footer_bottom {
     .list_item .mna_box {
         padding: 0;
         flex-direction: column;
+    }
+    .tbl_mna {
+        padding-left: 0;
+        gap: 10px;
+    }
+    .tbl_mna dl:nth-child(1) {
+        width: calc(70% - 5px);
+    }
+    .tbl_mna dl:nth-child(2) {
+        width: calc(30% - 5px);
+    }
+    .mna_box .tbl_mna dl dt {
+        font-size: 15px;
+    }
+    .tbl_mna dl dd {
+        align-items: flex-start;
+        height: auto;
+        min-height: 95px;
+        padding: 10px;
+        word-break: keep-all;
+        font-size: 14px;
+    }
+    .list_item .mna_box dd .font_blue {
+        align-items: flex-start;
+    }
+    .tbl_mna dl dt::before {
+        bottom: -15px;
+        height: 15px;
+    }
+    .tbl_mna dl dt::after {
+        bottom: -21px;
+        width: 10px;
+        height: 10px;
     }
 
     /* 용어사전 */
