--- a/portal/css/common.css
+++ b/portal/css/common.css
@@ -400,6 +400,8 @@
     position: relative;
     padding-left: 20px;
     box-sizing: border-box;
+    font-size: 17px;
+    font-weight: 400;
 }
 .content_list_box ul > li::before {
     content: "";
@@ -1405,6 +1407,8 @@
 .tbl_box_detail.type_02 table tr td {
     padding: 15px;
     border-right: 1px solid #e2e2e2;
+    border-bottom: 1px solid #e2e2e2;
+    vertical-align: middle;
 }
 .tbl_box_detail.type_02 table tr th:last-child,
 .tbl_box_detail.type_02 table tr td:last-child {
