--- a/portal/css/common.css
+++ b/portal/css/common.css
@@ -1477,6 +1477,7 @@
 .tbl_longcard > ul > li .tit {
     display: flex;
     flex-wrap: wrap;
+    align-items: baseline;
     gap: 8px;
 }
 .tbl_longcard > ul > li .tit span {
@@ -1501,19 +1502,26 @@
     width: 100%;
 }
 .tbl_longcard > ul > li .info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
     position: absolute;
     bottom: 25px;
     right: 25px;
 }
-.tbl_longcard > ul > li .info > .state {
-    text-align: right;
-    font-weight: 500;
-    padding: 10px;
-    text-align: center;
+.tbl_longcard > ul > li .state {
+    padding: 2px 10px;
     box-sizing: border-box;
-    background-color: #f5f5f5;
     border-radius: 5px;
-    margin-bottom: 5px;
+    text-align: center;
+    font-weight: 500;
+}
+.tbl_longcard > ul > li .state.gray {
+    background-color: #f5f5f5;
+}
+.tbl_longcard > ul > li .state.red {
+    background-color: #ef5350;
+    color: #fff;
 }
 .tbl_longcard > ul > li .info > ul {
     display: flex;
